change to Air::Examples

--- a/Changes
+++ b/Changes
@@ -38,7 +38,7 @@ Revision history for Air
     - docs & test
 
 0.0.5  2025-03-12T21:29:08Z
-    - Air::Play Site examples x09
+    - Air::Examples Site examples x09
 
 0.0.4  2025-03-04T22:01:32Z
     - Improve A tag
