--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Air
 
 {{$NEXT}}
+    - Redirects use cro delegate
+    - .air.yaml to resources/
 
 0.0.34  2025-11-24T18:32:28Z
     - add defaults file
