--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Air
 
 {{$NEXT}}
+    - export enum Provider items
 
 0.1.5  2026-01-09T11:52:43Z
     - add Custom Elements ('el')
