fix refresh & add to Site.serve

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Air
 
 {{$NEXT}}
+    - fix refresh & add to Site.serve
 
 0.1.7  2026-01-27T08:18:27Z
     - drop -->Markup from sub el
